# DB2-Project01

./: .gitignore  README.md
FileOrganization/: Bucket.h  CMakeLists.txt  ExpandibleHashing.cpp  const.h  libs.h  main.cpp
FileOrganization/ExtendibleHashing/: Bucket.h  ExpandibleHashing.h
FileOrganization/Record/: Basket.h  Movie.cpp  Movie.h  Netflix.h  Record.h  WorldPopulation.h
FileOrganization/SequentialFile/: SeqFile.cpp  SeqFile.h
FileOrganization/Test/: menu.cpp  menu.h
FileOrganization/test/: menu.cpp  menu.h
docs/: Docs 43c0a518bd354fbca7f804da27d9702b.md
